<resources>
    <string name="app_name">RoomieRoster</string>
    <string name="Login_welcome">Sign in!</string>
    <string name="Login_email">Email</string>
    <string name="Login_password">Password</string>
    <string name="Login_Continue">Continue</string>
    <string name="Login_NewUser">New User? </string>
    <string name="Login_CreateAccount">Create Account </string>
    <string name="RR_icon_description">RR Icon</string>
    <string name="Register_CreateAccount">Create Account</string>
    <string name="Register_Name">Name</string>
    <string name="Register_Email">Email</string>
    <string name="Register_Phone">Phone</string>
    <string name="Register_Password">Password</string>
    <string name="Home_InProgress">Home Page!</string>
    <string name="HouseOption_New">New House</string>
    <string name="House_Option_Join">Join House</string>
    <string name="JoinHouse_Joining">Joining a House!</string>
    <string name="JoinHouse_Code">House Code</string>
    <string name="JoinHouse_Join">Join</string>
    <string name="NewHouse_Create">Create a House!</string>
    <string name="NewHouse_Number">House Number</string>
    <string name="NewHouse_Street">Street</string>
    <string name="NewHouse_City">City</string>
    <string name="NewHouse_State">State</string>
    <string name="NewHouse_ZipCode">Zip Code</string>
    <string name="NewHouse_Nickname">Nickname</string>
    <string name="NewHouse_CreateBtn">Create</string>
    <string name="NewHouse_HouseCodeTxt">House Code: </string>
    <string name="NewHouse_Code">Placeholder</string>
    <string name="Home_Delete">Delete Account</string>
    <string name="Home_Chores">Chores</string>
    <string name="Home_FindRoommates">Find\nRoommates</string>
    <string name="Chore_View_Complete">Complete</string>
    <string name="Chore_View_Assignment">"Assignment: "</string>
    <string name="Chore_View_None">None</string>
    <string name="Chores_chores">Current House Chores</string>
    <string name="Chores_NewChore">New Chore</string>
    <string name="Chores_Back">Home</string>
    <string name="NewChore_AddChore">Add a New Chore!</string>
    <string name="NewChore_ChoreName">Chore Name</string>
    <string name="NewChore_AssignedTo">Who is the chore assigned to?</string>
    <string name="NewChore_Add">Add Chore</string>
    <string name="NewChore_Back">Go Back</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="channel_description">Channel for Location Service</string>
    <string name="channel_name">Location Service Channel</string>
    <string name="Roommate_MapView">Roommate</string>
    <string name="Roommmate_Zoom">Zoom In!</string>
    <string name="Connection_Lost">Internet Connection Lost</string>
</resources>