<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="RoomieRoster.UI.Activities.LoginActivity"
    android:orientation="vertical"
    android:padding = "15sp"
    android:background="@drawable/login_background"
    android:gravity="center_vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="40dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/rr_icon"
            android:contentDescription="@string/RR_icon_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:layout_marginStart="135dp"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NewHouse_Create"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingBottom="10dp"
        android:id="@+id/number_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NewHouse_Number"
            android:id="@+id/number"
            android:background="@drawable/rounded_edittext_bg"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingBottom="10dp">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/street_hint"
        android:layout_marginStart="15dp"
        android:paddingBottom="10dp"
        android:layout_marginEnd="15dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/NewHouse_Street"
            android:id="@+id/street"
            android:background="@drawable/rounded_edittext_bg"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/city_hint"
        android:layout_marginStart="15dp"
        android:paddingBottom="10dp"
        android:layout_marginEnd="15dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/NewHouse_City"
            android:id="@+id/city"
            android:background="@drawable/rounded_edittext_bg"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/state_hint"
        android:layout_marginStart="15dp"
        android:paddingBottom="10dp"
        android:layout_marginEnd="15dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/NewHouse_State"
            android:id="@+id/state"
            android:background="@drawable/rounded_edittext_bg"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/zipcode_hint"
        android:layout_marginStart="15dp"
        android:paddingBottom="10dp"
        android:layout_marginEnd="15dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/NewHouse_ZipCode"
            android:id="@+id/zipcode"
            android:background="@drawable/rounded_edittext_bg"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nickname_hint"
        android:layout_marginStart="15dp"
        android:paddingBottom="10dp"
        android:layout_marginEnd="15dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/NewHouse_Nickname"
            android:id="@+id/nickname"
            android:background="@drawable/rounded_edittext_bg"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_createHouse"
            android:text = "@string/NewHouse_CreateBtn"
            android:background="@drawable/continue_button"
            android:textSize = "11sp"
            android:layout_marginStart="260dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NewHouse_HouseCodeTxt"
                android:clickable="true"
                android:textSize="20sp"
                android:paddingBottom="30dp"
                android:textStyle="bold"
                android:textColor="@color/white" />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NewHouse_Code"
            android:id = "@+id/txt_houseCode"
            android:clickable="true"
            android:textSize="20sp"
            android:paddingBottom="30dp"
            android:textStyle="bold"
            android:layout_marginStart="135dp"
            android:textColor="@color/white" />
    </RelativeLayout>


</LinearLayout>