<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:background="@drawable/chore_container"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/choreName"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:textStyle="bold|italic"
        tools:text="Chore Name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/assign"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:layout_below="@id/choreName"
        tools:text="@string/Chore_View_Assignment" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/assignment"
        android:textSize="15dp"
        android:textColor="#f7a979"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/assign"
        android:layout_below="@id/choreName"
        tools:text="@string/Chore_View_None" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_choreComplete"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/Chore_View_Complete"
        android:background="@drawable/continue_button"/>



</RelativeLayout>
