<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="RoomieRoster.UI.Activities.ChoresActivity"
    android:orientation="vertical"
    android:padding = "15sp"
    android:background="@drawable/login_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Chores_chores"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:background="@drawable/chore_container"
        android:layout_marginBottom="10sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/recyclerview" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10sp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Chores_Back"
            android:id="@+id/btn_choresHome"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="20sp"
            android:gravity="center_vertical"
            android:background="@drawable/continue_button"
            android:padding="10sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Chores_NewChore"
            android:id="@+id/btn_choresNewChore"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/continue_button"
            android:padding="10sp"/>

    </LinearLayout>

</LinearLayout>